tests/ui/not_proc_macro.stderr
warning: panic message is not a string literal
   --> src/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |     ------ ^^^^^^^^
    |     |
    |     help: use std::panic::panic_any instead: `std::panic::panic_any`
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>

error: #[proc_macro_error] attribute can be used only with procedural macros

  = hint: if you are really sure that #[proc_macro_error] should be applied to this exact function, use #[proc_macro_error(allow_not_macro)]

 --> tests/ui/not_proc_macro.rs:3:1
  |
3 | #[proc_macro_error]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `proc_macro_error` (in Nightly builds, run with -Z macro-backtrace for more info)
